App netty backpressure logic improved to pause/resume consumers, fixed a bug for shared subs when the related consumers are not getting back on backpressure